--- a/public/css/filters_tax.css
+++ b/public/css/filters_tax.css
@@ -49,4 +49,41 @@
     #filters.show{
         display:flex;
     }
+
+    .tax-toggle{
+        margin-left:0;
+        margin-top:1rem;
+        width:100%;
+    }
 }
+
+
+
+   /* Reviews Responsive Fix */
+
+
+@media (max-width:768px){
+
+    .card.col-5{
+        width:100% !important;
+        margin-left:0 !important;
+    }
+
+    .card-body{
+        padding:1rem;
+    }
+
+    .starability-result{
+        margin-bottom:0.5rem;
+    }
+
+    .card form button{
+        width:100%;
+    }
+
+    textarea{
+        width:100%;
+        font-size:0.95rem;
+    }
+}
+
