Improve mobile responsiveness for filters and reviews

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,9 +1,10 @@
 <% layout("/layouts/boilerplate") %>
 
-<div class="filters-wrapper">
+<!-- <div class="filters-wrapper">
 <button class="btn btn-outline-dark d-md-none mb-2" id="toggleFilters">
   ☰ Filters
-</button>
+</button> -->
+<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
  <div id="filters">
     <a href="/listings/category/trending" style="text-decoration:none;color:inherit;">
     <div class="filter">
@@ -83,7 +84,8 @@
     </a>
 
 </div>
-</div>
+</nav>
+<!-- </div> -->
  
 
 
