--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,10 +107,24 @@ body{
 }
 
 
-/* Styling for Map*/
+/* Map Responsive Fix */
 #map{
-    height: 400px;
-    width: 100vh;
+    width: 100%;
+    max-width: 100%;
+}
+
+/* Mobile */
+@media (max-width:768px){
+    #map{
+        height: 250px;
+    }
+}
+
+/* Tablet */
+@media (min-width:769px) and (max-width:992px){
+    #map{
+        height: 300px;
+    }
 }
 
 
