--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -68,25 +68,26 @@
 
 
    <% if(listing.reviews.length > 0)  { %>
-    <div class="row">
-         <p><b>All Reviews</b></p>
+  <div class="row">
+    <p><b>All Reviews</b></p>
+
     <% for(review of listing.reviews) { %>
-        <div class="card col-5 ms-3 mb-3">
-            <div class="card-body">
-                <h5 class="card-title">@<%= review.author.username %></h5>
-                 <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
-                <p class="card-text"><%= review.comment %></p>  
-            </div>
-            <br>
-            <form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
-                <button class="btn btn-sm btn-dark">Delete</button>
-            </form>
+      <div class="card col-12 col-md-5 ms-md-3 mb-3">
+        <div class="card-body">
+          <h5 class="card-title">@<%= review.author.username %></h5>
+          <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
+          <p class="card-text"><%= review.comment %></p>
         </div>
-        </div>
+
+        <form class="mb-3 ms-3" method="POST"
+          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
+      </div>
     <% } %>
-    </div>
-    <% } %>
-</div>
+
+  </div>
+<% } %>
  <div class="col-6 offset-3 mb-3">
         <h3>Where you'll be</h3>
         <div id="map"></div>
