--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,156 +1,146 @@
 <% layout("/layouts/boilerplate") %>
 
-<!-- FILTER NAVBAR -->
-<nav class="navbar navbar-expand-md bg-body-light mt-3">
-  <div class="container-fluid">
+<!-- FILTERS SECTION -->
+<div class="container-fluid mt-3">
 
-    <!-- Filter Toggle Button (mobile) -->
-    <button
-      class="navbar-toggler mb-2"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#filtersNav"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <!-- Toggle Button (Mobile Only) -->
+  <button
+    class="btn btn-outline-dark d-md-none mb-3"
+    data-bs-toggle="collapse"
+    data-bs-target="#filtersNav"
+  >
+    ☰ Filters
+  </button>
 
-    <!-- Collapsible Filters -->
-    <div class="collapse navbar-collapse" id="filtersNav">
-      <div id="filters">
+  <!-- Filters -->
+  <div class="collapse d-md-block" id="filtersNav">
+    <div id="filters">
 
-        <a href="/listings/category/trending">
-          <div class="filter">
-            <i class="fa-solid fa-fire"></i>
-            <p>Trending</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/rooms">
-          <div class="filter">
-            <i class="fa-solid fa-bed"></i>
-            <p>Rooms</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/iconic">
-          <div class="filter">
-            <i class="fa-solid fa-mountain-city"></i>
-            <p>Iconic Cities</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/mountains">
-          <div class="filter">
-            <i class="fa-solid fa-mountain"></i>
-            <p>Mountains</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/castles">
-          <div class="filter">
-            <i class="fa-brands fa-fort-awesome"></i>
-            <p>Castles</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/pools">
-          <div class="filter">
-            <i class="fa-solid fa-person-swimming"></i>
-            <p>Amazing Pools</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/camping">
-          <div class="filter">
-            <i class="fa-solid fa-campground"></i>
-            <p>Camping</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/farms">
-          <div class="filter">
-            <i class="fa-solid fa-tractor"></i>
-            <p>Farms</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/arctic">
-          <div class="filter">
-            <i class="fa-regular fa-snowflake"></i>
-            <p>Arctic</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/domes">
-          <div class="filter">
-            <i class="fa-solid fa-igloo"></i>
-            <p>Domes</p>
-          </div>
-        </a>
-
-        <a href="/listings/category/boats">
-          <div class="filter">
-            <i class="fa-solid fa-ship"></i>
-            <p>Boats</p>
-          </div>
-        </a>
-
-      </div>
-    </div>
-
-  </div>
-</nav>
- 
-
-
-        
-        <div class="tax-toggle">
-            <div class="form-check-reverse form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-            <label class="form-check-label" for="switchCheckDefault">Display total after taxes</label>
-            </div>
+      <a href="/listings/category/trending">
+        <div class="filter">
+          <i class="fa-solid fa-fire"></i>
+          <p>Trending</p>
         </div>
+      </a>
+
+      <a href="/listings/category/rooms">
+        <div class="filter">
+          <i class="fa-solid fa-bed"></i>
+          <p>Rooms</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/iconic">
+        <div class="filter">
+          <i class="fa-solid fa-mountain-city"></i>
+          <p>Iconic Cities</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/mountains">
+        <div class="filter">
+          <i class="fa-solid fa-mountain"></i>
+          <p>Mountains</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/castles">
+        <div class="filter">
+          <i class="fa-brands fa-fort-awesome"></i>
+          <p>Castles</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/pools">
+        <div class="filter">
+          <i class="fa-solid fa-person-swimming"></i>
+          <p>Amazing Pools</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/camping">
+        <div class="filter">
+          <i class="fa-solid fa-campground"></i>
+          <p>Camping</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/farms">
+        <div class="filter">
+          <i class="fa-solid fa-tractor"></i>
+          <p>Farms</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/arctic">
+        <div class="filter">
+          <i class="fa-regular fa-snowflake"></i>
+          <p>Arctic</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/domes">
+        <div class="filter">
+          <i class="fa-solid fa-igloo"></i>
+          <p>Domes</p>
+        </div>
+      </a>
+
+      <a href="/listings/category/boats">
+        <div class="filter">
+          <i class="fa-solid fa-ship"></i>
+          <p>Boats</p>
+        </div>
+      </a>
+
+    </div>
+  </div>
+
 </div>
 
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
-    <% for(let listing of allListings) {  %>
-        <a href="/listings/<%= listing._id %>" class="listing-link">
-    <div class="card col listing-card" >
-    <img
-     src="<%= listing.image.url %>"
-     class="card-img-top"
-     alt="listing_image"
-     style="height : 20rem"
-     />
-    <div class="card-img-overlay"></div>
-    <div class="card-body">
-    <p class="card-text">
-    <b><%= listing.title %></b> <br>
-    &#8377; <%= listing.price.toLocaleString("en-IN") %>  / night
-    <i class="tax-info"> &nbsp;+18% GST</i>
-    </p>
-    </div>
- </div>
-</a>
- <% } %>
+<!-- TAX TOGGLE -->
+<div class="tax-toggle mt-3">
+  <div class="form-check-reverse form-switch">
+    <input class="form-check-input" type="checkbox" id="switchCheckDefault">
+    <label class="form-check-label">Display total after taxes</label>
+  </div>
+</div>
+
+<!-- LISTINGS -->
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-4">
+
+  <% for(let listing of allListings) { %>
+    <a href="/listings/<%= listing._id %>" class="listing-link">
+
+      <div class="card listing-card">
+        <img
+          src="<%= listing.image.url %>"
+          class="card-img-top"
+          style="height:20rem"
+        />
+
+        <div class="card-body">
+          <p class="card-text">
+            <b><%= listing.title %></b> <br>
+            ₹ <%= listing.price.toLocaleString("en-IN") %> / night
+            <i class="tax-info"> +18% GST</i>
+          </p>
+        </div>
+      </div>
+
+    </a>
+  <% } %>
+
 </div>
 
 <script>
-    let taxSwitch = document.getElementById("switchCheckDefault");
-    taxSwitch.addEventListener("click",() => {
-        let taxInfo = document.getElementsByClassName("tax-info");
-        for(info of taxInfo) {
-            if(info.style.display != "inline")
-            {
-                info.style.display = "inline";
-            }else {
-                info.style.display = "none";
-            }
+let taxSwitch = document.getElementById("switchCheckDefault");
 
-        }
-    });
+taxSwitch.addEventListener("click", () => {
+  let taxInfo = document.getElementsByClassName("tax-info");
+  for (info of taxInfo) {
+    info.style.display =
+      info.style.display === "inline" ? "none" : "inline";
+  }
+});
 </script>
-
-
-
-
