--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -14,10 +14,10 @@
     margin-right: 0.5rem;
   }
   .search-inp {
-    border-radius: 25px;
-    padding: 0.5rem 3rem 0.5rem 3rem;
-    font-size: 1rem;
-  }
+  border-radius: 25px;
+  padding: 0.5rem 1rem;
+  width: 100%;
+}
 </style>
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
@@ -32,7 +32,7 @@
       </div>
 
       <div class="navbar-nav ms-auto">
-      <form class="d-flex" role="search" action="/listings/search" method="GET">
+      <form class="d-flex flex-column flex-md-row gap-2" role="search"> action="/listings/search" method="GET">
         <input
           name="q"
           class="form-control me-2 search-inp"
