--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -14,7 +14,7 @@
 
   <!-- Filters -->
   <div class="collapse d-md-block" id="filtersNav">
-    <div id="filters">
+    <div id="filters" class="d-flex flex-nowrap overflow-auto gap-3 pb-2">
 
       <a href="/listings/category/trending">
         <div class="filter">
