--- a/public/css/filters_tax.css
+++ b/public/css/filters_tax.css
@@ -1,8 +1,10 @@
 #filters {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-    }
+    display: flex;
+    flex-wrap: nowrap;     
+    align-items: center;
+    overflow-x: auto;
+    white-space: nowrap;
+}
 
     .filter{
         text-align: center;
@@ -37,19 +39,3 @@
     }
 
 
-    #filters a{
-  text-decoration: none;
-  color: inherit;
-}
-
-/* Mobile spacing */
-@media (max-width:768px){
-  #filters{
-    justify-content: center;
-  }
-
-  .filter{
-    width: 30%;
-    margin-right: 0;
-  }
-}
