--- a/public/css/filters_tax.css
+++ b/public/css/filters_tax.css
@@ -1,10 +1,8 @@
 #filters {
-    display: flex;
-    flex-wrap: nowrap;     
-    align-items: center;
-    overflow-x: auto;
-    white-space: nowrap;
-}
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
 
     .filter{
         text-align: center;
