--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -32,7 +32,7 @@
       </div>
 
       <div class="navbar-nav ms-auto">
-      <form class="d-flex flex-column flex-md-row gap-2" role="search" action="/listings/search" method="GET">
+      <form class="d-flex flex-column flex-md-row gap-2" role="search" Saction="/listings/search" method="GET">
         <input
           name="q"
           class="form-control me-2 search-inp"
