fix navbar broken form

--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -197,7 +197,7 @@
 }
 
 
-/* .card.col-5{
+.card.col-5{
   width:100% !important;
   margin-left:0 !important;
 }
@@ -206,4 +206,4 @@
   .card.col-5{
     width:48% !important;
   }
-} */
+}
