fix leaflet popup template string

--- a/public/css/filters_tax.css
+++ b/public/css/filters_tax.css
@@ -17,7 +17,7 @@
     .filter p{
         font-size: 0.8rem;
     }
-    #filter a {
+    #filters a {
         text-decoration: none;
         color: black;
         }
