--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -44,6 +44,7 @@
         <i class="fa-solid fa-magnifying-glass"></i>Search
         </button>
     </form>
+    </div>
 </div>
 
       <div class="navbar-nav ms-auto">
