--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,8 +108,10 @@ body{
 
 
 /* Map Responsive Fix */
-#map {
-   height: 400px;
-   width: 100%;
+#map{
+  height: 300px;
+  width: 100%;
+  border-radius: 12px;
+  margin-top: 1rem;
 }
 
