--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,63 +1,46 @@
-<style>
-  .search-btn{
-    background-color: #fe424d;
-    color: #fff;
-    border-radius: 25px;
-    padding: 0 1rem 0 1rem;
-  }
-  .search-btn:hover{
-    background-color: #fe424d;
-    color: #fff;
-  }
-  .search-btn i{
-    display: inline;
-    margin-right: 0.5rem;
-  }
-  .search-inp {
-  border-radius: 25px;
-  padding: 0.5rem 1rem;
-  width: 100%;
-}
-</style>
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+    <a class="navbar-brand" href="/listings">
+      <i class="fa-regular fa-compass"></i>
+    </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
-      
       </div>
 
-      <div class="navbar-nav ms-auto">
-      <form class="d-flex flex-column flex-md-row gap-2" role="search"action="/listings/search" method="GET">
+      <!-- SEARCH -->
+      <form class="d-flex flex-column flex-md-row gap-2 ms-auto" role="search" action="/listings/search" method="GET">
         <input
           name="q"
           class="form-control me-2 search-inp"
           type="search"
           placeholder="Search destinations"
-         aria-label="Search"
+          aria-label="Search"
         />
         <button class="btn search-btn" type="submit">
-        <i class="fa-solid fa-magnifying-glass"></i>Search
+          <i class="fa-solid fa-magnifying-glass"></i>Search
         </button>
-    </form>
-    </div>
-</div>
+      </form>
 
-      <div class="navbar-nav ms-auto">
+      <!-- RIGHT LINKS -->
+      <div class="navbar-nav ms-md-3">
         <a class="nav-link" href="/listings/new">Airbnb your home</a> 
         <% if(!currUser) { %>
-        <a class="nav-link"href="/signup"><b>Sign Up</b></a>
-        <a class="nav-link" href="/login"><b>Log in</b></a>
+          <a class="nav-link" href="/signup"><b>Sign Up</b></a>
+          <a class="nav-link" href="/login"><b>Log in</b></a>
         <% } %>
 
         <% if(currUser) { %>
-        <a class="nav-link" href="/logout"><b>Log out</b></a> 
+          <a class="nav-link" href="/logout"><b>Log out</b></a> 
         <% } %>
       </div>
+
     </div>
   </div>
 </nav>
