--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -15,6 +15,7 @@
       </div>
 
       <!-- SEARCH -->
+      <div class="mx-auto">
       <form class="d-flex flex-column flex-md-row gap-2 ms-auto" role="search" action="/listings/search" method="GET">
         <input
           name="q"
@@ -27,6 +28,7 @@
           <i class="fa-solid fa-magnifying-glass"></i>Search
         </button>
       </form>
+      </div>
 
       <!-- RIGHT LINKS -->
       <div class="navbar-nav ms-md-3">
