--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -88,7 +88,7 @@
 
   </div>
 <% } %>
- <div class="col-6 offset-3 mb-3">
+ <div class="col-12 col-md-8 offset-md-2 mb-3">
         <h3>Where you'll be</h3>
         <div id="map"></div>
     </div>
