--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -88,7 +88,7 @@
 
   </div>
 <% } %>
- <div class="col-12 col-lg-10 offset-lg-1 mb-3">
+ <div class="col-12, col-md col-lg">
         <h3>Where you'll be</h3>
         <div id="map"></div>
     </div>
