--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,33 +22,40 @@ body{
 }
 
 /*Footer Styling*/
-.f-info-links a {
-    text-decoration: none;
-    color: #222222;
+footer{
+  width:100%;
 }
-.f-info-links a:hover {
-    text-decoration: underline;
+
+.f-info{
+  background-color:#ebebeb;
+  height:8rem;
+  width:100%;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
 }
-.f-info-links ,
-.f-info-socials , .f-info-brand{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.f-info-socials,
+.f-info-brand,
+.f-info-links{
+  width:100%;
 }
- 
-.f-info-socials i {
-    margin-right: 1rem;
-    font-size: 1.2rem;
+
+.f-info-socials i{
+  font-size:1.2rem;
+  margin-right:1rem;
 }
-.f-info {
-    text-align: center;
-    display: flex;
-    height: 8rem;
-    flex-wrap: wrap;
-    background-color: #ebebeb;
-    justify-content: center;
-    align-items: space-evenly;
+
+.f-info-links a{
+  text-decoration:none;
+  color:#222222;
+  margin-right:0.5rem;
+}
+
+.f-info-links a:hover{
+  text-decoration:underline;
 }
 
 /* styling for the Cards */
