--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,8 +23,7 @@ body{
 
 /*Footer Styling*/
 footer{
-  width:100vw;
-  margin-left:calc(-50vw + 50%);
+  width:100%;
 }
 
 .f-info{
@@ -42,21 +41,6 @@ footer{
 .f-info-brand,
 .f-info-links{
   width:100%;
-}
-
-.f-info-socials i{
-  font-size:1.2rem;
-  margin-right:1rem;
-}
-
-.f-info-links a{
-  text-decoration:none;
-  color:#222222;
-  margin-right:0.5rem;
-}
-
-.f-info-links a:hover{
-  text-decoration:underline;
 }
 
 /* styling for the Cards */
