--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -88,7 +88,7 @@
 
   </div>
 <% } %>
- <div class="col-12 col-md-10 offset-md-1 mb-3">
+ <div class="col-11, col-md col-lg">
         <h3>Where you'll be</h3>
         <div id="map"></div>
     </div>
