--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,6 +1,5 @@
-<footer>
+<footer class="site-footer">
   <div class="f-info">
-    
     <div class="f-info-socials">
       <i class="fa-brands fa-square-facebook"></i>
       <i class="fa-brands fa-instagram"></i>
@@ -15,6 +14,5 @@
       <a href="/privacy">Privacy</a>
       <a href="/terms">Terms</a>
     </div>
-
   </div>
 </footer>
