--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,5 +1,5 @@
 <% layout("/layouts/boilerplate") %>
-<div class="row mt-3">
+<div class="mt-3">
     <div class="col-8 offset-3">
     <h3><%= listing.title %> </h3>
     </div>
