--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -29,8 +29,6 @@
 <% } %>
 
 
-
-
 <div class="col-8 offset-3 mb-3">
   
     <% if(currUser) { %>
@@ -88,7 +86,7 @@
 
   </div>
 <% } %>
- <div class="col-11, col-md col-lg">
+ <div class="col-11 col-md col-lg">
         <h3>Where you'll be</h3>
         <div id="map"></div>
     </div>
