--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer w-100">
   <div class="f-info">
     <div class="f-info-socials">
       <i class="fa-brands fa-square-facebook"></i>
