--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,34 @@ body{
     color: #222222  !important;    /* !important is used to override bootstrap default styling */
 }
 
+/*Search Bar Styling*/
+ .search-btn{
+    background-color: #fe424d;
+    color: #fff;
+    border-radius: 25px;
+    padding: 0 1rem 0 1rem;
+  }
+  .search-btn:hover{
+    background-color: #fe424d;
+    color: #fff;
+  }
+  .search-btn i{
+    display: inline;
+    margin-right: 0.5rem;
+  }
+.search-inp {
+  border-radius: 25px;
+  padding: 0.5rem 1rem;
+  flex: 1;
+  min-width: 0%;
+}
+
+@media (min-width:768px){
+  .search-inp{
+    width: 420px;
+  }
+}
+
 /*Footer Styling*/
 .site-footer{
   width:100%;
