--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -99,15 +99,12 @@
 </div>
 
 <!-- TAX TOGGLE -->
-<div class="container mt-3">
-<div class="tax-toggle">
+<div class="tax-toggle mt-3">
   <div class="form-check-reverse form-switch">
     <input class="form-check-input" type="checkbox" id="switchCheckDefault">
     <label class="form-check-label">Display total after taxes</label>
   </div>
 </div>
-</div>
-
 
 <!-- LISTINGS -->
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-4">
