--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,4 @@
+<!--
 <style>
   .search-btn{
     background-color: #fe424d;
@@ -37,13 +38,111 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-
       <!-- LEFT -->
-      <div class="navbar-nav">
+       
+      <!-- <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
 
       <!-- SEARCH -->
+       <!--
+      <form class="d-flex flex-column flex-md-row gap-2 mx-auto" role="search" action="/listings/search" method="GET">
+        <input
+          name="q"
+          class="form-control me-2 search-inp"
+          type="search"
+          placeholder="Search destinations"
+          aria-label="Search"
+        />
+        <button class="btn search-btn" type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>Search
+        </button>
+      </form> -->
+
+      <%#
+      <!-- RIGHT SIDE -->
+      <div class="navbar-nav ms-md-3">
+        <a class="nav-link" href="/listings/new">Airbnb your home</a> 
+        <%#
+        <!--
+        <!-- <% if(!currUser) { %> -->
+          <a class="nav-link" href="/signup"><b>Sign Up</b></a>
+          <a class="nav-link" href="/login"><b>Log in</b></a>
+        <!-- <% } %>
+        <% if(currUser) { %> -->
+          <a class="nav-link" href="/logout"><b>Log out</b></a> 
+        <!-- <% } %> -->
+        -->
+        #%>
+       
+      </div>
+      
+    </div>
+  </div>
+</nav>
+#%>
+
+
+<style>
+.search-btn{
+  background-color:#fe424d;
+  color:#fff;
+  border-radius:25px;
+  padding:0.3rem 0.9rem !important;
+  font-size:0.9rem;
+}
+.search-btn:hover{
+  background-color:#fe424d;
+  color:#fff;
+}
+.search-btn i{
+  display:inline;
+  margin-right:0.5rem;
+}
+.search-inp{
+  border-radius:25px;
+  padding:0.3rem 0.8rem !important;
+  flex:1;
+  min-width:250px;
+  font-size:0.9rem;
+}
+
+.navbar{
+  padding-top:0.3rem !important;
+  padding-bottom:0.3rem !important;
+  min-height:auto !important;
+  z-index:1000;
+}
+
+.container-fluid{
+  padding-left:0.5rem !important;
+  padding-right:0.5rem !important;
+}
+
+@media (min-width:768px){
+  .search-inp{
+    width:420px;
+  }
+}
+</style>
+
+<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top py-1">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/listings">
+      <i class="fa-regular fa-compass"></i>
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    
+<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+      <div class="navbar-nav">
+        <a class="nav-link" href="/listings">Explore</a>
+      </div>
+
       <form class="d-flex flex-column flex-md-row gap-2 mx-auto" role="search" action="/listings/search" method="GET">
         <input
           name="q"
@@ -57,7 +156,6 @@
         </button>
       </form>
 
-      <!-- RIGHT SIDE -->
       <div class="navbar-nav ms-md-3">
         <a class="nav-link" href="/listings/new">Airbnb your home</a> 
         <% if(!currUser) { %>
