--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -25,7 +25,7 @@
 .navbar{
   padding-top:0.8rem !important;
   padding-bottom:0.8rem !important;
-  min-height:auto !important;
+  min-height:72px !important;
   z-index:1000;
 }
 
@@ -33,6 +33,10 @@
   padding-left:1.5rem !important;
   padding-right:1.5rem !important;
 }
+.navbar-nav .nav-link{
+  padding:0.5rem 0.75rem;
+}
+
 
 @media (min-width:768px){
   .search-inp{
