--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -23,11 +23,12 @@
 }
 
 .navbar{
-  padding:1.8rem !important;
-  min-height:72px !important;
+  padding-top:0.9rem !important;
+  padding-bottom:0.9rem !important;
+  min-height:75px;
   z-index:1000;
-  display: flex;
-  align-items: center;
+  display:flex;
+  align-items:center;
 }
 
 .container-fluid{
@@ -92,7 +93,7 @@
         <% if(currUser) { %>
           <a class="nav-link" href="/logout"><b>Log out</b></a> 
         <% } %>
-        
+
       </div>
 
     </div>
