--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -23,12 +23,10 @@
 }
 
 .navbar{
-  padding-top:0.9rem !important;
-  padding-bottom:0.9rem !important;
-  min-height:75px;
+  padding-top:0.3rem !important;
+  padding-bottom:0.3rem !important;
+  min-height:auto !important;
   z-index:1000;
-  display:flex;
-  align-items:center;
 }
 
 .container-fluid{
