--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -47,6 +47,14 @@
     width:420px;
   }
 }
+@media(max-width:768px){
+  .navbar form{
+    width:100%;
+  }
+  .search-btn{
+    width:100%;
+  }
+}
 </style>
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
