--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -34,10 +34,10 @@
 }
 
 @media(max-width:768px){
-  .search-inp{
+  .search-btn{
     width:100%;
   }
-  .search-btn{
+  .search-inp{
     width:100%;
   }
 }
@@ -47,59 +47,52 @@
     width:420px;
   }
 }
-@media(max-width:768px){
-  .navbar form{
-    width:100%;
-  }
-  .search-btn{
-    width:100%;
-  }
-}
 </style>
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
+
     <a class="navbar-brand" href="/listings">
       <i class="fa-regular fa-compass"></i>
     </a>
 
-    
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+    <button class="navbar-toggler" type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
-      <div class="navbar-nav">
+     
+ <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
 
-<form class="d-flex flex-column flex-md-row gap-2 mx-auto order-3 order-md-2 mt-2 mt-md-0"
-      role="search" action="/listings/search" method="GET">
-  <input name="q" class="form-control search-inp" type="search"
-         placeholder="Search destinations">
-  <button class="btn search-btn" type="submit">
-    <i class="fa-solid fa-magnifying-glass"></i>Search
-  </button>
-</form>
+      <form class="d-flex flex-column flex-md-row gap-2 mx-auto"
+            role="search"
+            action="/listings/search"
+            method="GET">
+        <input name="q"
+               class="form-control search-inp"
+               type="search"
+               placeholder="Search destinations">
+        <button class="btn search-btn" type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>Search
+        </button>
+      </form>
 
-<div class="collapse navbar-collapse order-4 order-md-3"
-     id="navbarNavAltMarkup">
+      <div class="navbar-nav ms-md-3">
+        <a class="nav-link" href="/listings/new">Airbnb your home</a> 
+        <% if(!currUser) { %>
+          <a class="nav-link" href="/signup"><b>Sign Up</b></a>
+          <a class="nav-link" href="/login"><b>Log in</b></a>
+        <% } %>
+        <% if(currUser) { %>
+          <a class="nav-link" href="/logout"><b>Log out</b></a> 
+        <% } %>
+      </div>
 
-  <div class="navbar-nav">
-    <a class="nav-link" href="/listings">Explore</a>
-  </div>
-
-  <div class="navbar-nav ms-md-3">
-    <a class="nav-link" href="/listings/new">Airbnb your home</a> 
-    <% if(!currUser) { %>
-      <a class="nav-link" href="/signup"><b>Sign Up</b></a>
-      <a class="nav-link" href="/login"><b>Log in</b></a>
-    <% } %>
-    <% if(currUser) { %>
-      <a class="nav-link" href="/logout"><b>Log out</b></a> 
-    <% } %>
-  </div>
-
+    </div>
   </div>
 </nav>
