--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -3,7 +3,7 @@
 .page-content{
   padding-top: 100px;
 }
-/* Search Button /
+/* Search Button */
 .search-btn{
   background-color:#fe424d;
   color:#fff;
@@ -23,26 +23,26 @@
   margin-right:0.5rem;
 }
 
-/ Search Input /
+/* Search Input */
 .search-inp{
   border-radius:25px;
   padding:0.4rem 0.9rem;
   font-size:0.9rem;
 }
 
-/ Navbar /
+/* Navbar */
 .navbar{
   padding:0.9rem 0;
   min-height:75px;
   background-color:white;
 }
 
-/ Fix collapse overlap /
+/* Fix collapse overlap */
 .navbar-collapse{
   background-color:white;
 }
 
-/ Responsive Fix */
+/* Responsive Fix */
 @media(max-width:768px){
   .search-btn,
   .search-inp{
